deployment/web/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ui
  labels:
    app: ui
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: ui
