deployment/web/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            backend:
              serviceName: ui
              servicePort: 3000
          - path: /
            backend:
              serviceName: api-gw
              servicePort: 8000
